--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="wrapper grid">
       <div class="item">
       <div class="item1">
-      <a href="https://okada1226.github.io/Ohizumi-Kazufumi/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ohizumi.png?raw=true"></a>
+      <a href="https://okada1226.github.io/ohizumikazufumi/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ohizumi.png?raw=true"></a>
       <div class="item1-text">
       <p class="item-title">大泉和文 個展</p>
       <p class="item-info">2020, dm design</p>
@@ -34,7 +34,7 @@
 
       <div class="item">
       <div class="item2">
-      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/makuruhan.png?raw=true">
+      <a href="https://okada1226.github.io/mediaismassage/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/makuruhan.png?raw=true"></a>
       <div class="item2-text">
       <p class="item-title2">メディアは<br>マッサージである</p>
       <p class="item-info">2020, book design</p>
@@ -44,7 +44,7 @@
 
       <div class="item">
       <div class="item3">
-       <a href="https://okada1226.github.io/Suzuka-Yasu/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/suzuka.png?raw=true"></a>
+       <a href="https://okada1226.github.io/suzukayasu/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/suzuka.png?raw=true"></a>
       <div class="item3-text">
       <p class="item-title">鈴鹿芳康 個展</p>
       <p class="item-info">2020, dm design</p>
@@ -54,7 +54,7 @@
 
       <div class="item">
       <div class="item4">
-      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/maikomodan.png?raw=true">
+      <a href="https://okada1226.github.io/maikomodan/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/maikomodan.png?raw=true"></a>
       <div class="item4-text">
       <p class="item-title">舞妓モダン<p>
       <p class="item-info">2020, book design</p>
@@ -64,7 +64,7 @@
 
       <div class="item">
       <div class=item5>
-      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ishimotoyasuhiro.png?raw=true">
+      <a href="https://okada1226.github.io/ishimotoyasuhiro/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ishimotoyasuhiro.png?raw=true"></a>
       <div class="item5-text">
       <p class="item-title5">石本康博<br>生誕100年</p>
       <p class="item-info">2020, book design</p>
@@ -74,7 +74,7 @@
 
       <div class="item">
       <div class="item6">
-      <a href="https://okada1226.github.io/LA-LA-LARD/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/lalalard.png?raw=true"></a>
+      <a href="https://okada1226.github.io/lalalard/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/lalalard.png?raw=true"></a>
       <div class="item6-text">
       <p class="item-title">LA LA LARD</p>
       <p class="item-info">2020, web design</p>
@@ -84,7 +84,7 @@
         
       <div class="item">
       <div class="item7">
-      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/tensumo.png?raw=true">
+      <a href="https://okada1226.github.io/tensumo/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/tensumo.png?raw=true"></a>
       <div class="item7-text">
       <p class="item-title7">転居するなら<br>スーモだった件</p>
       <p class="item-info">2020, web design</p>
@@ -94,7 +94,7 @@
 
       <div class="item">
       <div class="item8">
-      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/unseal.png?raw=true">
+      <a href="https://okada1226.github.io/unseal/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/unseal.png?raw=true"></a>
       <div class="item8-text">
       <p class="item-title">unsealr<p>
       <p class="item-info">2019, web design</p>
@@ -104,7 +104,7 @@
 
       <div class="item">
       <div class="item9">
-      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/dokusougan.png?raw=true">
+      <a href="https://okada1226.github.io/dokusougan/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/dokusougan.png?raw=true"></a>
       <div class="item9-text">
       <p class="item-title">毒掃丸<p>
       <p class="item-info">2019, video ads</p>
@@ -114,7 +114,7 @@
 
       <div class="item">
       <div class="item10">
-      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/Jugendgedenken.png?raw=true">
+      <a href="https://okada1226.github.io/Jugendgedenken/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/Jugendgedenken.png?raw=true"></a>
       <div class="item10-text">
       <p class="item-title">Jugendgedenken</p>
       <p class="item-info">2019, artwork</p>
@@ -124,7 +124,7 @@
 
       <div class="item">
       <div class="item11">
-      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/poster.png?raw=true">
+      <a href="https://okada1226.github.io/bookandposter/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/poster.png?raw=true"></a>
       <div class="item11-text">
       <p class="item-title11">本とポスターに<br>ついての思索<br></p>
       <p class="item-info">2017, artwork</p>
@@ -134,7 +134,7 @@
 
       <div class="item">
       <div class="item12">
-      <a href="https://okada1226.github.io/Mandara/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/mandara.png?raw=true"></a>
+      <a href="https://okada1226.github.io/mandara/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/mandara.png?raw=true"></a>
       <div class="item12-text">
       <p class="item-title">Mandala</p>
       <p class="item-info">2017, graphic art</p>
@@ -144,7 +144,7 @@
 
       <div class="item">
       <div class="item13">
-      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/meishi.png?raw=true">
+      <a href="https://okada1226.github.io/meishi/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/meishi.png?raw=true"></a>
       <div class="item13-text">
       <p class="item-title">名刺デザイン</p>
       <p class="item-info">2017, graphic design</p>
@@ -154,7 +154,7 @@
 
       <div class="item">
       <div class="item14">
-      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/clear-comic.png?raw=true">
+      <a href="https://okada1226.github.io/clearcomic/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/clear-comic.png?raw=true"></a>
       <div class=item14-text>
       <p class="item-title">Clear Comic </p>
       <p class="item-info">2017, graphic art</p>
@@ -164,7 +164,7 @@
 
       <div class="item">
       <div class="item15">
-      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/seinomezame.png?raw=true">
+      <a href="https://okada1226.github.io/seinomezame/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/seinomezame.png?raw=true"></a>
       <div class="item15-text">
       <p class="item-title">せいのめざめ<p>
       <p class="item-info">2017, book design</p>
@@ -174,7 +174,7 @@
 
       <div class="item">
       <div class="item16">
-      <img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/fading-calendar.png?raw=true">
+      <a href="https://okada1226.github.io/fadingcalendar/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/fading-calendar.png?raw=true"></a>
       <div class="item16-text">
       <p class="item-title">Fading calendar</p>
       <p class="item-info">2016, calendar design</p>
