--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
       <div class="item">
       <div class="item10">
-      <a href="https://okada1226.github.io/Jugendgedenken/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/Jugendgedenken.png?raw=true"></a>
+      <a href="https://okada1226.github.io/jugendgedenken/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/Jugendgedenken.png?raw=true"></a>
       <div class="item10-text">
       <p class="item-title">Jugendgedenken</p>
       <p class="item-info">2019, artwork</p>
