--- a/index.html
+++ b/index.html
@@ -9,16 +9,34 @@
     <link rel="stylesheet" href="style.css">
     </head>
 
-      <header>
-        <div class="header-logo">
-        <p>MAYA OKADA<span> SELECTED WORKS</span></p>
-        </div>
-        <div class="header-list">
-        <ul>
-        <li class="contact"><a href="file:///Users/mayaokada/Desktop/index.html">Contact</a></li><li class="slash1">/</li><li class="biography"><a href="file:///Users/mayaokada/Desktop/index.html">Biography</a></li><li class="slash1">/</li><li class="work"><a href="file:///Users/mayaokada/Desktop/index.html">Works</a></li>
-        </ul>
-        </div>
-        </header>
+<header>
+             <div class="header-logo">
+             <p>MAYA OKADA<br class="br-sp"><span> SELECTED WORKS</span></p>
+             </div>
+             <div class="header-list">
+             <ul>
+             <li class="contact"><a href="mailto:okadamaya19951226@gmail.com">Contact</a></li><li class="slash1">/</li><li class="biography"><a href="https://okada1226.github.io/biography/">Biography</a></li><li class="slash1">/</li><li class="work"><a href="https://okada1226.github.io/mayaokadaworks/">Works</a></li>
+             </ul>
+             </div>
+
+ <div class="drawer">
+   <input type="checkbox" id="drawer-check" class="drawer-hidden" >
+   <label for="drawer-check" class="drawer-open"><span></span></label>
+   <nav class="drawer-content">
+     <ul class="drawer-list">
+       <li class="drawer-item">
+         <a href="https://okada1226.github.io/mayaokadaworks/">Works</a>
+       </li>
+       <li class="drawer-item">
+         <a href="https://okada1226.github.io/biography/">Biography</a>
+       </li>
+       <li class="drawer-item">
+         <a href="mailto:okadamaya19951226@gmail.com">Contact</a>
+       </li>
+     </ul>
+   </nav>
+ </div>
+ </header>
 
       <body>
       <div class="wrapper grid">
