--- a/index.html
+++ b/index.html
@@ -9,202 +9,202 @@
     <link rel="stylesheet" href="style.css">
     </head>
 
-<header>
-             <div class="header-logo">
-             <p>MAYA OKADA<br class="br-sp"><span> SELECTED WORKS</span></p>
-             </div>
-             <div class="header-list">
-             <ul>
-             <li class="contact"><a href="mailto:okadamaya19951226@gmail.com">Contact</a></li><li class="slash1">/</li><li class="biography"><a href="https://okada1226.github.io/biography/">Biography</a></li><li class="slash1">/</li><li class="work"><a href="https://okada1226.github.io/mayaokadaworks/">Works</a></li>
-             </ul>
-             </div>
+  <header>
+               <div class="header-logo">
+               <p>MAYA OKADA<br class="br-sp"><span> SELECTED WORKS</span></p>
+               </div>
+               <div class="header-list">
+               <ul>
+               <li class="contact"><a href="mailto:okadamaya19951226@gmail.com">Contact</a></li><li class="slash1">/</li><li class="biography"><a href="https://okada1226.github.io/biography/">Biography</a></li><li class="slash1">/</li><li class="work"><a href="https://okada1226.github.io/mayaokadaworks/">Works</a></li>
+               </ul>
+               </div>
 
- <div class="drawer">
-   <input type="checkbox" id="drawer-check" class="drawer-hidden" >
-   <label for="drawer-check" class="drawer-open"><span></span></label>
-   <nav class="drawer-content">
-     <ul class="drawer-list">
-       <li class="drawer-item">
-         <a href="https://okada1226.github.io/mayaokadaworks/">Works</a>
-       </li>
-       <li class="drawer-item">
-         <a href="https://okada1226.github.io/biography/">Biography</a>
-       </li>
-       <li class="drawer-item">
-         <a href="mailto:okadamaya19951226@gmail.com">Contact</a>
-       </li>
-     </ul>
-   </nav>
- </div>
- </header>
+   <div class="drawer">
+     <input type="checkbox" id="drawer-check" class="drawer-hidden" >
+     <label for="drawer-check" class="drawer-open"><span></span></label>
+     <nav class="drawer-content">
+       <ul class="drawer-list">
+         <li class="drawer-item">
+           <a href="https://okada1226.github.io/mayaokadaworks/">Works</a>
+         </li>
+         <li class="drawer-item">
+           <a href="https://okada1226.github.io/biography/">Biography</a>
+         </li>
+         <li class="drawer-item">
+           <a href="mailto:okadamaya19951226@gmail.com">Contact</a>
+         </li>
+       </ul>
+     </nav>
+   </div>
+   </header>
 
-      <body>
-      <div class="wrapper grid">
-      <div class="item">
-      <div class="item1">
-      <a href="https://okada1226.github.io/ohizumikazufumi/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ohizumi.png?raw=true"></a>
-      <div class="item1-text">
-      <p class="item-title">大泉和文 個展</p>
-      <p class="item-info">2020, dm design</p>
-      </div>
-      </div>
-      </div>
+        <body>
+        <div class="wrapper grid">
+        <div class="item">
+        <div class="item1">
+        <a href="https://okada1226.github.io/ohizumikazufumi/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ohizumi.png?raw=true"></a>
+        <div class="item1-text">
+        <p class="item-title">大泉和文 個展</p>
+        <p class="item-info">2020, dm design</p>
+        </div>
+        </div>
+        </div>
 
-      <div class="item">
-      <div class="item2">
-      <a href="https://okada1226.github.io/mediaismassage/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/makuruhan.png?raw=true"></a>
-      <div class="item2-text">
-      <p class="item-title2">メディアは<br>マッサージである</p>
-      <p class="item-info">2020, book design</p>
-      </div>
-      </div>
-      </div>
+        <div class="item">
+        <div class="item2">
+        <a href="https://okada1226.github.io/mediaismassage/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/makuruhan.png?raw=true"></a>
+        <div class="item2-text">
+        <p class="item-title2">メディアは<br>マッサージである</p>
+        <p class="item-info">2020, book design</p>
+        </div>
+        </div>
+        </div>
 
-      <div class="item">
-      <div class="item3">
-       <a href="https://okada1226.github.io/suzukayasu/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/suzuka.png?raw=true"></a>
-      <div class="item3-text">
-      <p class="item-title">鈴鹿芳康 個展</p>
-      <p class="item-info">2020, dm design</p>
-      </div>
-      </div>
-      </div>
+        <div class="item">
+        <div class="item3">
+         <a href="https://okada1226.github.io/suzukayasu/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/suzuka.png?raw=true"></a>
+        <div class="item3-text">
+        <p class="item-title">鈴鹿芳康 個展</p>
+        <p class="item-info">2020, dm design</p>
+        </div>
+        </div>
+        </div>
 
-      <div class="item">
-      <div class="item4">
-      <a href="https://okada1226.github.io/maikomodan/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/maikomodan.png?raw=true"></a>
-      <div class="item4-text">
-      <p class="item-title">舞妓モダン<p>
-      <p class="item-info">2020, book design</p>
-      </div>
-      </div>
-      </div>
+        <div class="item">
+        <div class="item4">
+        <a href="https://okada1226.github.io/maikomodan/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/maikomodan.png?raw=true"></a>
+        <div class="item4-text">
+        <p class="item-title">舞妓モダン<p>
+        <p class="item-info">2020, book design</p>
+        </div>
+        </div>
+        </div>
 
-      <div class="item">
-      <div class=item5>
-      <a href="https://okada1226.github.io/ishimotoyasuhiro/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ishimotoyasuhiro.png?raw=true"></a>
-      <div class="item5-text">
-      <p class="item-title5">石本康博<br>生誕100年</p>
-      <p class="item-info">2020, book design</p>
-      </div>
-      </div>
-      </div>
+        <div class="item">
+        <div class=item5>
+        <a href="https://okada1226.github.io/ishimotoyasuhiro/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/ishimotoyasuhiro.png?raw=true"></a>
+        <div class="item5-text">
+        <p class="item-title5">石本康博<br>生誕100年</p>
+        <p class="item-info">2020, book design</p>
+        </div>
+        </div>
+        </div>
 
-      <div class="item">
-      <div class="item6">
-      <a href="https://okada1226.github.io/lalalard/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/lalalard.png?raw=true"></a>
-      <div class="item6-text">
-      <p class="item-title">LA LA LARD</p>
-      <p class="item-info">2020, web design</p>
-      </div>
-      </div>
-      </div>
-        
-      <div class="item">
-      <div class="item7">
-      <a href="https://okada1226.github.io/tensumo/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/tensumo.png?raw=true"></a>
-      <div class="item7-text">
-      <p class="item-title7">転居するなら<br>スーモだった件</p>
-      <p class="item-info">2020, web design</p>
-      </div>
-      </div>
-      </div>
+        <div class="item">
+        <div class="item6">
+        <a href="https://okada1226.github.io/lalalard/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/lalalard.png?raw=true"></a>
+        <div class="item6-text">
+        <p class="item-title">LA LA LARD</p>
+        <p class="item-info">2020, web design</p>
+        </div>
+        </div>
+        </div>
 
-      <div class="item">
-      <div class="item8">
-      <a href="https://okada1226.github.io/unseal/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/unseal.png?raw=true"></a>
-      <div class="item8-text">
-      <p class="item-title">unsealr<p>
-      <p class="item-info">2019, web design</p>
-      </div>
-      </div>
-      </div>
+        <div class="item">
+        <div class="item7">
+        <a href="https://okada1226.github.io/tensumo/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/tensumo.png?raw=true"></a>
+        <div class="item7-text">
+        <p class="item-title7">転居するなら<br>スーモだった件</p>
+        <p class="item-info">2020, web design</p>
+        </div>
+        </div>
+        </div>
 
-      <div class="item">
-      <div class="item9">
-      <a href="https://okada1226.github.io/dokusougan/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/dokusougan.png?raw=true"></a>
-      <div class="item9-text">
-      <p class="item-title">毒掃丸<p>
-      <p class="item-info">2019, video ads</p>
-      </div>
-      </div>
-      </div>
+        <div class="item">
+        <div class="item8">
+        <a href="https://okada1226.github.io/unseal/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/unseal.png?raw=true"></a>
+        <div class="item8-text">
+        <p class="item-title8">unsealr<p>
+        <p class="item-info">2019, web design</p>
+        </div>
+        </div>
+        </div>
 
-      <div class="item">
-      <div class="item10">
-      <a href="https://okada1226.github.io/jugendgedenken/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/Jugendgedenken.png?raw=true"></a>
-      <div class="item10-text">
-      <p class="item-title">Jugendgedenken</p>
-      <p class="item-info">2019, artwork</p>
-      </div>
-      </div>
-      </div>
+        <div class="item">
+        <div class="item9">
+        <a href="https://okada1226.github.io/dokusougan/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/dokusougan.png?raw=true"></a>
+        <div class="item9-text">
+        <p class="item-title">毒掃丸<p>
+        <p class="item-info">2019, video ads</p>
+        </div>
+        </div>
+        </div>
 
-      <div class="item">
-      <div class="item11">
-      <a href="https://okada1226.github.io/bookandposter/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/poster.png?raw=true"></a>
-      <div class="item11-text">
-      <p class="item-title11">本とポスターに<br>ついての思索<br></p>
-      <p class="item-info">2017, artwork</p>
-      </div>
-      </div>
-      </div>
+        <div class="item">
+        <div class="item10">
+        <a href="https://okada1226.github.io/jugendgedenken/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/Jugendgedenken.png?raw=true"></a>
+        <div class="item10-text">
+        <p class="item-title">Jugendgedenken</p>
+        <p class="item-info">2019, artwork</p>
+        </div>
+        </div>
+        </div>
 
-      <div class="item">
-      <div class="item12">
-      <a href="https://okada1226.github.io/mandara/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/mandara.png?raw=true"></a>
-      <div class="item12-text">
-      <p class="item-title">Mandala</p>
-      <p class="item-info">2017, graphic art</p>
-      </div>
-      </div>
-      </div>
+        <div class="item">
+        <div class="item11">
+        <a href="https://okada1226.github.io/bookandposter/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/poster.png?raw=true"></a>
+        <div class="item11-text">
+        <p class="item-title11">本とポスターに<br>ついての思索<br></p>
+        <p class="item-info">2017, artwork</p>
+        </div>
+        </div>
+        </div>
 
-      <div class="item">
-      <div class="item13">
-      <a href="https://okada1226.github.io/meishi/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/meishi.png?raw=true"></a>
-      <div class="item13-text">
-      <p class="item-title">名刺デザイン</p>
-      <p class="item-info">2017, graphic design</p>
-      </div>
-      </div>
-      </div>
+        <div class="item">
+        <div class="item12">
+        <a href="https://okada1226.github.io/mandara/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/mandara.png?raw=true"></a>
+        <div class="item12-text">
+        <p class="item-title">Mandala</p>
+        <p class="item-info">2017, graphic art</p>
+        </div>
+        </div>
+        </div>
 
-      <div class="item">
-      <div class="item14">
-      <a href="https://okada1226.github.io/clearcomic/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/clear-comic.png?raw=true"></a>
-      <div class=item14-text>
-      <p class="item-title">Clear Comic </p>
-      <p class="item-info">2017, graphic art</p>
-      </div>
-      </div>
-      </div>
+        <div class="item">
+        <div class="item13">
+        <a href="https://okada1226.github.io/meishi/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/meishi.png?raw=true"></a>
+        <div class="item13-text">
+        <p class="item-title">名刺デザイン</p>
+        <p class="item-info">2017, graphic design</p>
+        </div>
+        </div>
+        </div>
 
-      <div class="item">
-      <div class="item15">
-      <a href="https://okada1226.github.io/seinomezame/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/seinomezame.png?raw=true"></a>
-      <div class="item15-text">
-      <p class="item-title">せいのめざめ<p>
-      <p class="item-info">2017, book design</p>
-      </div>
-      </div>
-      </div>
+        <div class="item">
+        <div class="item14">
+        <a href="https://okada1226.github.io/clearcomic/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/clear-comic.png?raw=true"></a>
+        <div class=item14-text>
+        <p class="item-title">Clear Comic </p>
+        <p class="item-info">2017, graphic art</p>
+        </div>
+        </div>
+        </div>
 
-      <div class="item">
-      <div class="item16">
-      <a href="https://okada1226.github.io/fadingcalendar/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/fading-calendar.png?raw=true"></a>
-      <div class="item16-text">
-      <p class="item-title">Fading calendar</p>
-      <p class="item-info">2016, calendar design</p>
-      </div>
-      </div>
-      </div>
-        
-     </div>
+        <div class="item">
+        <div class="item15">
+        <a href="https://okada1226.github.io/seinomezame/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/seinomezame.png?raw=true"></a>
+        <div class="item15-text">
+        <p class="item-title15">せいのめざめ<p>
+        <p class="item-info">2017, book design</p>
+        </div>
+        </div>
+        </div>
 
-        <footer>
-        <p class=copyright>2016-2020 MAYA OKADA SELECTED WORKS.</p>
-      </footer>
+        <div class="item">
+        <div class="item16">
+        <a href="https://okada1226.github.io/fadingcalendar/"><img src="https://github.com/okada1226/MAYA-OKADA-WORKS/blob/main/fading-calendar.png?raw=true"></a>
+        <div class="item16-text">
+        <p class="item-title">Fading calendar</p>
+        <p class="item-info">2016, calendar design</p>
+        </div>
+        </div>
+        </div>
 
-      </body>
-    </html>
+       </div>
+
+          <footer>
+          <p class=copyright>2016-2020 MAYA OKADA SELECTED WORKS.</p>
+        </footer>
+
+        </body>
+      </html>
